# cv_highlevel

./: .gitignore  CMakeLists.txt  color_detect.cpp
chu/: README.md
chu/houghlines/: CMakeCache.txt  CMakeLists.txt  HoughLines  Makefile  cmake_install.cmake
classifier_trainer/: negatives.txt  positives.txt
classifier_trainer/samples/: 0.jpg.vec  1.jpg.vec  10.jpg.vec  11.jpg.vec  12.jpg.vec  13.jpg.vec  14.jpg.vec  15.jpg.vec  16.jpg.vec  17.jpg.vec  18.jpg.vec  19.jpg.vec  2.jpg.vec  20.jpg.vec  21.jpg.vec  22.jpg.vec  23.jpg.vec  24.jpg.vec  25.jpg.vec  26.jpg.vec  27.jpg.vec  28.jpg.vec  29.jpg.vec  3.jpg.vec  30.jpg.vec  31.jpg.vec  32.jpg.vec  33.jpg.vec  34.jpg.vec  35.jpg.vec  36.jpg.vec  37.jpg.vec  38.jpg.vec  39.jpg.vec  4.jpg.vec  40.jpg.vec  41.jpg.vec  42.jpg.vec  43.jpg.vec  44.jpg.vec  (+40 more)
classifier_trainer/tools/: mergevec.py
roomba_detect/: CMakeLists.txt  frame_extractor.cpp
src/: CMakeLists.txt  cv_main  main.cpp
stolorz/houghlines_example/: CMakeCache.txt  CMakeLists.txt
stolorz/opencv-2.4.13/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  cvconfig.h  install_manifest.txt
stolorz/opencv-2.4.13/release/apps/: CTestTestfile.cmake  Makefile  (+1 more)
zheng/opencv-2.4.13/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake
zheng/opencv-2.4.13/samples/: CMakeCache.txt
(+381 files in other folders)
